--- a/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.23/event-mouseclick-동적 스타일링(javascript).html
+++ b/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.23/event-mouseclick-동적 스타일링(javascript).html
@@ -14,15 +14,45 @@
 
 <script>
 
+  /* function */
+
+  /* function ( flexSetting ) */
+  function flexSetting(element,display, justifyContent, alignItems) {
+    element.style.display = display;  
+    element.style.justifyContent = justifyContent;
+    element.style.alignItems = alignItems;
+  }
+
+  /* function ( resetSetting ) */
+  function resetSetting(element, margin, padding, boxSizing) {
+    element.style.margin = margin;
+    element.style.padding = padding;
+    element.style.boxSizing = boxSizing;
+  }
+
+  /* function ( widthHeight ) */
+  function widthHeight(element, width, height) {
+    element.style.width = width;
+    element.style.height = height;
+  }
+
+  /* function ( fontSizeWeight ) */
+  function fontSizeWeightColor(element, fontSize, fontWeight, color) {
+    element.style.fontSize = fontSize;
+    element.style.fontWeight = fontWeight;
+    element.style.color = color;
+  }
+
   /* body */
   const body = window.document.body;
   console.log(body);
   // console.dir(body);
 
   /* body style */
-  body.style.margin = '0';
-  body.style.padding = '0';
-  body.style.boxSizing = '0';
+  resetSetting(body, '0', '0', 'border-box');
+  // body.style.margin = '0';
+  // body.style.padding = '0';
+  // body.style.boxSizing = 'border-box';
 
 
   /* #root */
@@ -34,9 +64,9 @@
   console.log(root);
 
   /* #root style */
-  root.style.width = '100vw';
-  root.style.height = '100vh';
-
+  widthHeight(root, '100vw', '100vh');
+  // root.style.width = '100vw';
+  // root.style.height = '100vh';
 
   /* #page-one */
   const pageOne = document.createElement('div');
@@ -47,13 +77,16 @@
   console.log(pageOne);
 
   /* #page-one style */
-  pageOne.style.position = 'absolute';
-  pageOne.style.width = 'inherit';
-  pageOne.style.height = 'inherit';
-  pageOne.style.display = 'flex';
-  pageOne.style.justifyContent = 'center';
-  pageOne.style.alignItems = 'center';
+  flexSetting(pageOne,'flex', 'center', 'center')
+  // pageOne.style.display = 'flex';
+  // pageOne.style.justifyContent = 'center';
+  // pageOne.style.alignItems = 'center';
 
+  widthHeight(pageOne, 'inherit', 'inherit');
+  // pageOne.style.width = 'inherit';
+  // pageOne.style.height = 'inherit';
+
+  pageOne.style.position = 'absolute';
 
   /* page-one > button */
   let button = document.createElement('button');
@@ -71,14 +104,19 @@
   console.log(click);
 
   /* button style */
-  button.style.width = '73px';
-  button.style.height = '73px';
+  widthHeight(button, '73px', '73px');
+  // button.style.width = '73px';
+  // button.style.height = '73px';
+
+  fontSizeWeightColor(button, '24px', '400', '#fff');
+  // button.style.fontSize = '24px';
+  // button.style.fontWeight = '400';
+  // button.style.color = '#fff';
+
   button.style.backgroundColor = '#333';
   button.style.border = 'none';
   button.style.borderRadius = '93.5px';
-  button.style.fontSize = '24px';
-  button.style.color = '#fff';
-  button.style.fontWeight = '400';
+
   // button.style.lineHeight = '29px';
   // button.style.fontFamily = 'Inter';
   // button.style.fontStyle = 'normal';
@@ -106,15 +144,22 @@
   // console.log(pageTwoTagP_textNode);
 
   /* #page-two style */
+  flexSetting(pageTwo,'none', 'center', 'center')
+  // pageTwo.style.display = 'none';
+  // pageTwo.style.justifyContent = 'center';
+  // pageTwo.style.alignItems = 'center';
+
+  widthHeight(pageTwo, 'inherit', 'inherit');
+  // pageTwo.style.width = 'inherit';
+  // pageTwo.style.height = 'inherit';
+
+  fontSizeWeightColor(pageTwo, '32px', '400', '#333');
+  // pageTwo.style.fontSize = '32px';
+  // pageTwo.style.fontWeight = '400';
+  // pageTwo.style.color = '#333';
+  
   pageTwo.style.position = 'absolute';
-  pageTwo.style.width = 'inherit';
-  pageTwo.style.height = 'inherit';
-  pageTwo.style.fontSize = '32px';
-  pageTwo.style.color = '#333';
-  pageTwo.style.fontWeight = '400';
-  pageTwo.style.display = 'none';
-  pageTwo.style.justifyContent = 'center';
-  pageTwo.style.alignItems = 'center';
+
   // pageTwo.style.lineHeight = '39px';
   // pageTwo.style.fontFamily = 'Inter';
   // pageTwo.style.fontStyle = 'normal';
@@ -142,15 +187,22 @@
   // console.log(pageThreeTagP_textNode);
 
   /* #page-three style */
+  flexSetting(pageThree,'none', 'center', 'center')
+  // pageThree.style.display = 'none';
+  // pageThree.style.justifyContent = 'center';
+  // pageThree.style.alignItems = 'center';
+
+  widthHeight(pageThree, 'inherit', 'inherit');
+  // pageThree.style.width = 'inherit';
+  // pageThree.style.height = 'inherit';
+
+  fontSizeWeightColor(pageThree, '32px', '400', '#333');
+  // pageThree.style.fontSize = '32px';
+  // pageThree.style.fontWeight = '400';
+  // pageThree.style.color = '#333';
+
   pageThree.style.position = 'absolute';
-  pageThree.style.width = 'inherit';
-  pageThree.style.height = 'inherit';
-  pageThree.style.fontSize = '32px';
-  pageThree.style.color = '#333';
-  pageThree.style.fontWeight = '400';
-  pageThree.style.display = 'none';
-  pageThree.style.justifyContent = 'center';
-  pageThree.style.alignItems = 'center';
+
   // pageThree.style.lineHeight = '39px';
   // pageThree.style.fontFamily = 'Inter';
   // pageThree.style.fontStyle = 'normal';
