--- a/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.23/event-mouseclick-정적 스타일링(html,css).html
+++ b/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.23/event-mouseclick-정적 스타일링(html,css).html
@@ -33,6 +33,8 @@
 
 <script>
 
+  /* 함수를 사용하지 않음 */
+
   /* body 상수 선언 */
   const body = window.document.body;
   console.log(body);
@@ -41,7 +43,7 @@
   /* body style */
   body.style.margin = '0';
   body.style.padding = '0';
-  body.style.boxSizing = '0';
+  body.style.boxSizing = 'border-box';
 
 
   /* root 상수 선언 */
