--- a/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.22/function-return/function-return.html
+++ b/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.22/function-return/function-return.html
@@ -27,6 +27,7 @@
       }
     }
 
+    console.log(minus(10, 5)); // 5
 
 
   
@@ -39,7 +40,7 @@
       }
     }
 
-    console.log(sum(10, minus(20, 5)));
+    console.log(sum(10, minus(20, 5))); //  25
 
 
   </script>
