Update 지역변수 - 생명 주기.html

--- a/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.25/전역변수, 지역변수/지역변수/지역변수 - 생명 주기.html
+++ b/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.25/전역변수, 지역변수/지역변수/지역변수 - 생명 주기.html
@@ -39,7 +39,7 @@
 
         함수가 생성한 스코프는 렉시컬 환경이라 부르는 물리적인 실체가 있다고 했다.
 
-        따라서 변수는 자신이 등록된 스코프가 소멸(메모리 해제) 될 때 까지 유요하다.
+        따라서 변수는 자신이 등록된 스코프가 소멸(메모리 해제) 될 때 까지 유효하다.
 
         즉, 누군가 스코프를 참조하고 있으면 스코프는 소멸하지 않고 생존하게 된다.
       */
