--- a/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.27/배열 메서드/배열 메서드 - indexOf(), lastIndexOf().html
+++ b/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.27/배열 메서드/배열 메서드 - indexOf(), lastIndexOf().html
@@ -26,7 +26,7 @@
     // 즉, 3번째의 인덱스 부터 요소 3을 검색하여 인덱스를 반환한다.
     // 두 번째 인수를 생략하면 처음부터 검색한다.
     console.log(arr.indexOf(3, 3)); // 3
-
+    console.log(arr.indexOf(2, 2)); // 2
 
     /* indexOf 메서드는 배열에 특정 요소가 존재하는지 확인할 때 유용하다. */
 
