--- a/javascript/2022.08/2022.08.28 ~ 08.31/2022.08.28/배열 메서드 - splice().html
+++ b/javascript/2022.08/2022.08.28 ~ 08.31/2022.08.28/배열 메서드 - splice().html
@@ -80,9 +80,21 @@
     // 원본 배열이 변경된다.
     console.log(arr3);  // [1,4]
 
-    // 제거한 요소가 배열로 반횐된다.
+    // 제거한 요소가 배열로 반환된다.
     console.log(result3); // [2, 3]
 
+
+    const arr3_1 = [1, 2, 3, 4];
+    
+    // start 값이 음수이기 때문에 배열의 끝에서 부터 요소를 세어나갑니다.
+    // -n 이면 요소 끝의 n번째 요소를 가리키며 값의 절대값이 배열의 길이보다 큰 경우 0으로 설정됩니다.
+    const result3_1 = arr3_1.splice(-1, 1);
+
+    // 원본 배열이 변경된다.
+    console.log(arr3_1);  // [1, 2, 3]
+
+    // 제거한 요소가 배열로 반환된다.
+    console.log(result3_1); // [4]
 
     /* 
       splice 메서드의 두 번째 인수, 즉 제거할 요소의 개수를 생략하면 첫 번째 인수로 전달된 시작 인덱스부터
