--- a/javascript/2022.08/2022.08.28 ~ 08.31/2022.08.29/digimonApi/digimonApi.html
+++ b/javascript/2022.08/2022.08.28 ~ 08.31/2022.08.29/digimonApi/digimonApi.html
@@ -5,16 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script type="module" src="./digimonApi(import).js"></script>
 </head>
 <body>
-  <h1>
+  
 
-    Git 테스트 입니다.
 
-    git 테스트 입니다.
-
-    이 파일 커밋만 바뀌게 하려고 합니다.
-
-  </h1>
 </body>
 </html>
