--- a/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.27/배열 메서드/배열 메서드 - indexOf(), lastIndexOf().html
+++ b/javascript/2022.08/2022.08.21 ~ 08.27/2022.08.27/배열 메서드/배열 메서드 - indexOf(), lastIndexOf().html
@@ -77,9 +77,10 @@
     
     // 다시 학습 필요 (fromIndex에 대한 개념)
 
+    // fromIndex가 음수 값이면 역순으로 인덱스를 시작하는데, 역순 인덱스 첫번째는 0이 아니라 1로 시작한다.
+
     // // 'number' 라는 문자열에 'u' 요소가 존재하는지 확인한다.
     // console.log('number'.lastIndexOf('u', 0));  // -1
-
 
 
 
