--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
       border-right: none;
     }
     .gallery li:nth-child(1) {
-      background: url(images/artistic-image-01.jpg) no-repeat center center;
+      background: url(./images/artistic-image-01.jpg) no-repeat center center;
     }
     .gallery li:nth-child(2) {
-      background: url(images/artistic-image-02.jpg) no-repeat center center;
+      background: url(./images/artistic-image-02.jpg) no-repeat center center;
     }
     .gallery li:nth-child(3) {
-      background: url(images/artistic-image-03.jpg) no-repeat center center;
+      background: url(./images/artistic-image-03.jpg) no-repeat center center;
     }
     .gallery li:nth-child(4) {
-      background: url(images/artistic-image-04.jpg) no-repeat center center;
+      background: url(./images/artistic-image-04.jpg) no-repeat center center;
     }
     .gallery li:nth-child(5) {
-      background: url(images/artistic-image-05.jpg) no-repeat center center;
+      background: url(./images/artistic-image-05.jpg) no-repeat center center;
     }
     .gallery:hover li {
       flex: 1;
