--- a/javascript/2022.08/2022.08.28 ~ 08.31/2022.08.31/codingTestPractice/범위 내에서 중복되지 않는 난수.html
+++ b/javascript/2022.08/2022.08.28 ~ 08.31/2022.08.31/codingTestPractice/범위 내에서 중복되지 않는 난수.html
@@ -25,7 +25,10 @@
 
     /* flowchart */
 
-    // 1. 
+    // 1. 1부터 20까지의 범위에서 랜덤으로 난수를 추출한다.
+    // 2. 추출한 난수를 length가 3인 배열로 만든다.
+    // 3. 난수가 중복되지 않기 위해 indexOf 함수를 사용한다.
+    // 4. indexOf의 값이 -1 이라는건 배열에 요소로 존재하지 않는다는 것이기 때문에  indexOf 값이 -1 인 난수를 대입했을때는 중복되지 않는다.
 
     const inputData = [];
 
