--- a/javascript/2022.08/2022.08.28 ~ 08.31/2022.08.28/배열 메서드 - splice().html
+++ b/javascript/2022.08/2022.08.28 ~ 08.31/2022.08.28/배열 메서드 - splice().html
@@ -57,7 +57,7 @@
 
     const arr2 = [1, 2, 3, 4];
 
-    // 원본 배열의 1부터 0개이 요소를 제거하고 그 자리에 새로운 요소 100을 삽입한다.
+    // 원본 배열의 1부터 0개의 요소를 제거하고 그 자리에 새로운 요소 100을 삽입한다.
     const result2 = arr2.splice(1, 0, 100);
 
     // 원본 배열이 변경된다.
