--- a/javascript/2022.08/2022.08.28 ~ 08.31/2022.08.31/DOM API 지원 메서드와 주요 명령 제어/DOM API 지원 메서드와 주요 명령제어 사용.html
+++ b/javascript/2022.08/2022.08.28 ~ 08.31/2022.08.31/DOM API 지원 메서드와 주요 명령 제어/DOM API 지원 메서드와 주요 명령제어 사용.html
@@ -16,7 +16,7 @@
       let element = document.createElement(tagName);
       element.innerHTML = childrenNode;
       for(const cssValue in props) {
-        console.log(`검사하기, 동작하는 스타일링 프로퍼티 : ${cssValue}`);
+        console.log(cssValue);
         if(cssValue === 'id') {
           element.id = props[cssValue];
         } else {
@@ -24,8 +24,11 @@
         }
       }
       parent.appendChild(element);
+      
     }
   }
+
+  
 
   const root = document.getElementById('root');
 
