--- a/javascript/2022.09/2022.09.01 ~ 09.03/2022.09.01/배열 메서드 활용-push, splice, join (div 생성, appendChild, style 제어)/배열 메서드 활용(div 생성, appendChild, style 제어).html
+++ b/javascript/2022.09/2022.09.01 ~ 09.03/2022.09.01/배열 메서드 활용-push, splice, join (div 생성, appendChild, style 제어)/배열 메서드 활용(div 생성, appendChild, style 제어).html
@@ -45,7 +45,7 @@
       setResult.push(new TagList(element, index));
       counter++;
     })
-    console.log();
+    console.log(setResult);
 
     // element make and style, appending
     function tagMaker(parentElement, tagName, array, counter) {
