--- a/javascript/2022.09/2022.09.04 ~ 09.10/2022.09.05/구구단/구구단.html
+++ b/javascript/2022.09/2022.09.04 ~ 09.10/2022.09.05/구구단/구구단.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script type="module" src="./main.js" defer></script>
+  <style>
+    
+  </style>
 </head>
 <body>
   <div id="root"></div>
