--- a/javascript/2022.09/2022.09.04 ~ 09.10/2022.09.07/rotate-animation.html
+++ b/javascript/2022.09/2022.09.04 ~ 09.10/2022.09.07/rotate-animation.html
@@ -39,10 +39,10 @@
           top: 50%; 
           transform: translate(-50%, -50%);}
       
-          /* @keyframes planetRotate {
+          @keyframes planetRotate {
             0%{transform: rotate(0) ;}
             100%{transform: rotate(360deg);}
-          } */
+          }
     </style>
 </head>
 <body>
